--- a/Order.html
+++ b/Order.html
@@ -107,36 +107,30 @@
 
 
 
+<section title="carousel_img">
+  <div class="container-fluid p-0">
+    <div class="row">
+      <div class="col-12 position-relative" style="height: 400px;">
+        <img src="img/carousel-1.jpg" class="w-100 h-100" alt="..."
+          style="object-fit: cover; opacity: 0.5;">
 
-    <section title="carocel_img">
-        <div class="container-fluid">
-            <div class="row  " style="height: 200px; ">
-                <div class="col-md-12" style="background-color: rgba(220, 116, 18, 0.5);height: 400px;">
+        <!-- Text on image -->
+        <div class="position-absolute top-50 start-50 translate-middle text-center px-2">
+          <h1 style="font-size: 48px; font-weight: bold; text-shadow: 0px 0px 5px black; color: white;">
+            Order Now Books
+          </h1>
 
-
-
-
-                    <img src="img/carousel-1.jpg" class="d-block " alt="..."
-                        style="height: 100%;width: 100%;opacity: 0.5;">
-
-                    <h1
-                        style="font-size: 70px;font-weight: bold; text-shadow: 0px 0px 5px black;margin-top: -200px; text-align: center; color: white;">
-                        Order Now Books</h1>
-                    <center>
-                        <b style="text-align: center;"><a href=""
-                                style="text-decoration: none; color: white; font-size: 25px; text-shadow: 0px 0px 5px black;">Home
-                                / </a><a href=""
-                                style="text-decoration: none; color: white; font-size: 25px; text-shadow: 0px 0px 5px black;">Pages
-                                /
-                            </a><a href=""
-                                style="text-decoration: none; color: white; font-size: 25px; text-shadow: 0px 0px 5px black;">
-                                Order Now Books </a></b>
-                    </center>
-                </div>
-            </div>
+          <div style="font-size: 3vw; color: white; text-shadow: 0px 0px 5px black;">
+            <a href="#" style="text-decoration: none; color: white;">Home / </a>
+            <a href="#" style="text-decoration: none; color: white;">Pages / </a>
+            <a href="#" style="text-decoration: none; color: white;">Order Now Books</a>
+          </div>
         </div>
+      </div>
+    </div>
+  </div>
+</section>
 
-    </section><br><br>
 
 
  <div class="container" style="margin-top: 200px;">
