--- a/our_team.html
+++ b/our_team.html
@@ -166,7 +166,7 @@
       <div class="col-lg-3 col-md-6 col-12">
         <div class="card team-card text-center">
           <div class="team-img position-relative">
-            <img src="/img/team-1.jpg" class="img-fluid w-100" alt="Instructor">
+            <img src="img/team-1.jpg" class="img-fluid w-100" alt="Instructor">
             <div class="social-icons">
               <a href="#"><i class="fa fa-facebook"></i></a>
               <a href="#"><i class="fa fa-twitter"></i></a>
@@ -185,7 +185,7 @@
       <div class="col-lg-3 col-md-6 col-12">
         <div class="card team-card text-center">
           <div class="team-img position-relative">
-            <img src="/img/team-2.jpg" class="img-fluid w-100" alt="Instructor">
+            <img src="img/team-2.jpg" class="img-fluid w-100" alt="Instructor">
             <div class="social-icons">
               <a href="#"><i class="fa fa-facebook"></i></a>
               <a href="#"><i class="fa fa-twitter"></i></a>
@@ -204,7 +204,7 @@
       <div class="col-lg-3 col-md-6 col-12">
         <div class="card team-card text-center">
           <div class="team-img position-relative">
-            <img src="/img/team-3.jpg" class="img-fluid w-100" alt="Instructor">
+            <img src="img/team-3.jpg" class="img-fluid w-100" alt="Instructor">
             <div class="social-icons">
               <a href="#"><i class="fa fa-facebook"></i></a>
               <a href="#"><i class="fa fa-twitter"></i></a>
@@ -222,7 +222,7 @@
       <div class="col-lg-3 col-md-6 col-12">
         <div class="card team-card text-center">
           <div class="team-img position-relative">
-            <img src="/img/team-4.jpg" class="img-fluid w-100" alt="Instructor">
+            <img src="img/team-4.jpg" class="img-fluid w-100" alt="Instructor">
             <div class="social-icons">
               <a href="#"><i class="fa fa-facebook"></i></a>
               <a href="#"><i class="fa fa-twitter"></i></a>
@@ -242,7 +242,7 @@
         <div class="col-lg-3 col-md-6 col-12">
         <div class="card team-card text-center">
           <div class="team-img position-relative">
-            <img src="/img/team-2.jpg" class="img-fluid w-100" alt="Instructor">
+            <img src="img/team-2.jpg" class="img-fluid w-100" alt="Instructor">
             <div class="social-icons">
               <a href="#"><i class="fa fa-facebook"></i></a>
               <a href="#"><i class="fa fa-twitter"></i></a>
@@ -262,7 +262,7 @@
         <div class="col-lg-3 col-md-6 col-12">
         <div class="card team-card text-center">
           <div class="team-img position-relative">
-            <img src="/img/team-3.jpg" class="img-fluid w-100" alt="Instructor">
+            <img src="img/team-3.jpg" class="img-fluid w-100" alt="Instructor">
             <div class="social-icons">
               <a href="#"><i class="fa fa-facebook"></i></a>
               <a href="#"><i class="fa fa-twitter"></i></a>
@@ -281,7 +281,7 @@
         <div class="col-lg-3 col-md-6 col-12">
         <div class="card team-card text-center">
           <div class="team-img position-relative">
-            <img src="/img/team-4.jpg" class="img-fluid w-100" alt="Instructor">
+            <img src="img/team-4.jpg" class="img-fluid w-100" alt="Instructor">
             <div class="social-icons">
               <a href="#"><i class="fa fa-facebook"></i></a>
               <a href="#"><i class="fa fa-twitter"></i></a>
@@ -302,7 +302,7 @@
         <div class="col-lg-3 col-md-6 col-12">
         <div class="card team-card text-center">
           <div class="team-img position-relative">
-            <img src="/img/team-1.jpg" class="img-fluid w-100" alt="Instructor">
+            <img src="img/team-1.jpg" class="img-fluid w-100" alt="Instructor">
             <div class="social-icons">
               <a href="#"><i class="fa fa-facebook"></i></a>
               <a href="#"><i class="fa fa-twitter"></i></a>
