--- a/index.html
+++ b/index.html
@@ -511,7 +511,7 @@
       <div class="col-lg-3 col-md-6 col-12">
         <div class="card team-card text-center">
           <div class="team-img position-relative">
-            <img src="/img/team-1.jpg" class="img-fluid w-100" alt="Instructor">
+            <img src="img/team-1.jpg" class="img-fluid w-100" alt="Instructor">
             <div class="social-icons">
               <a href="#"><i class="fa fa-facebook"></i></a>
               <a href="#"><i class="fa fa-twitter"></i></a>
@@ -530,7 +530,7 @@
       <div class="col-lg-3 col-md-6 col-12">
         <div class="card team-card text-center">
           <div class="team-img position-relative">
-            <img src="/img/team-4.jpg" class="img-fluid w-100" alt="Instructor">
+            <img src="img/team-4.jpg" class="img-fluid w-100" alt="Instructor">
             <div class="social-icons">
               <a href="#"><i class="fa fa-facebook"></i></a>
               <a href="#"><i class="fa fa-twitter"></i></a>
@@ -549,7 +549,7 @@
       <div class="col-lg-3 col-md-6 col-12">
         <div class="card team-card text-center">
           <div class="team-img position-relative">
-            <img src="/img/team-2.jpg" class="img-fluid w-100" alt="Instructor">
+            <img src="img/team-2.jpg" class="img-fluid w-100" alt="Instructor">
             <div class="social-icons">
               <a href="#"><i class="fa fa-facebook"></i></a>
               <a href="#"><i class="fa fa-twitter"></i></a>
@@ -567,7 +567,7 @@
       <div class="col-lg-3 col-md-6 col-12">
         <div class="card team-card text-center">
           <div class="team-img position-relative">
-            <img src="/img/team-3.jpg" class="img-fluid w-100" alt="Instructor">
+            <img src="img/team-3.jpg" class="img-fluid w-100" alt="Instructor">
             <div class="social-icons">
               <a href="#"><i class="fa fa-facebook"></i></a>
               <a href="#"><i class="fa fa-twitter"></i></a>
